deploy/cce/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: isbim-web
  labels:
    app.kubernetes.io/name: isbim-web
    app.kubernetes.io/part-of: isbim
